--- a/OllamaCodeAssistant/Resources/ChatView.html
+++ b/OllamaCodeAssistant/Resources/ChatView.html
@@ -11,12 +11,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/plugins/line-numbers/prism-line-numbers.css">
 
   <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 10px;
-      background-color: #f5f5f5;
+    .user-prompt {
+        background-color: #f0f0f0;
+        padding: 5px;
+        margin-bottom: 5px;
+        border-radius: 5px;
     }
+
+    .assistant-response {
+        padding: 5px;
+        margin-bottom: 5px;
+    }
+      body {
+          font-family: "Segoe UI", sans-serif;
+          margin: 0;
+          padding: 10px;
+          background-color: #f5f5f5;
+          font-size: 0.85em;
+      }
 
     pre {
       border-radius: 6px;
